2007-06-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed bug when importing shp files into a VGA file over an existing shape.

2007-06-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed coastline desynch bug.
	* Fixed bug #1731542 by forcing the current frame to be passed for the
	  get_3d_xtiles get_3d_ytiles (thus, ensuring proper bounding boxes).
	* Fixed bug #1731543.
	* Fixed bug in ES method of saving differential VGA patches and improved
	  recognition of files from patch dir.

2007-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/virtstone.h: Changed 'default' value for virtue stone map to be map 0.
	* objs/egg.cc: Fixed bug where sfx eggs would translate the SFX number to
	  the BG SFX, causing problems in SI.
	  De-hard-coded field data. Poison and sleep fields no longer activate if
	  the target is already poisoned/sleeping.
	* objs/objs.cc: Added some missing sfx when the avatar attacks an object.
	* shapes/miscinf.*, objs/*: Major work in object sfx; multiple objects can
	  now play the same sfx (as seen in the originals). Objects can now have
	  ranges (random or sequential) of sound effects, as well as sport a random
	  delay between each time the sfx is played.
	  New animation data and cycles unifies the way fields are handled with
	  every other animated object, including allowing them to have sfx. Also,
	  objects can have sfx synchronized with specific frames of the animation
	  (e.g., grandfather clocks) and can sport delays between each animation
	  cycle (e.g., bubbles).
	* shapes/miscinf.*: Modified to read new animation and SFX data.
	* gumps/misc_buttons.cc: Added missing button SFX.
	* data/*/shape_info.txt: Added tons of new sfx and animation data.
	* usecode/compiler/*:
	* actors.cc: Modified roll_to_win to better match statistical tests.
	  Added 'graze' and default 'hit' SFX. Modified NPCs to *really* be dormant
	  when in a different map from main actor.